# upper_envelope

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .yamllint.yml  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.envs/: testenv.yml
.github/workflows/: main.yml
docs/tutorials/: getting_started.ipynb
src/upper_envelope/: __init__.py  fast_upper_envelope.py  shared.py  upper_envelope_jax.py  upper_envelope_numba.py
src/upper_envelope/fues_jax/: check_and_scan_funcs.py  check_conditions.py  forward_and_backward_scans.py  fues_jax.py  scan_funcs.py  upper_envelope_jax.py
src/upper_envelope/fues_numba/: fues_numba.py
tests/: conftest.py  test_fast_upper_envelope.py  test_fues_jax.py  test_fues_numba.py  test_upper_envelope_jax.py  test_upper_envelope_numba.py
tests/sandbox/: sandbox_max.ipynb
tests/utils/: fast_upper_envelope_org.py  interpolation.py  upper_envelope_fedor.py
