[metadata]
name = upper-envelope
description = Upper envelope scan for dynamic discrete-continuous life cycle models.
long_description = file: README.md
long_description_content_type = text/markdown
author = "Max Blesch, Sebastian Gsell"
author_email = "maximilian.blesch@hu-berlin.de, sebastian.gsell@econ.lmu.de"
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    Github = https://github.com/OpensourceEconomics/upper-envelope

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dcegm=upper-envelope.cli:cli

[check-manifest]
ignore =
    src/upper-envelope/_version.py